--- a/src/App.css
+++ b/src/App.css
@@ -847,6 +847,10 @@ body {
     .hero-col {
     margin-top: 16%;
   }
+  .team-arrows {
+    position: relative;
+    z-index: 0;
+  }
 }
 
 /* Media Query for Tablet Devices */
